# projeto_embarcatech_2

./: gerar_graficos_complementares.py  gerar_graficos_resultados.py
FPGA-Vision/: lane.vhd  lane_hough.vhd
Teste FPGA Lattice/InterfaceFPGA_7/: CMakeLists.txt
Teste FPGA Lattice/InterfaceFPGA_7/src/: CMakeLists.txt  main.c
Teste FPGA Lattice/Projeto_FPGA/: colorlight_i9.lpf  flash_openfpgaloader.bat  frame_buffer_24bit.sv  g_matrix.sv  g_root_lut.hex  g_root_lut.sv  hough_tracker.sv  pixel_assembler_tx.sv  sobel_processor.sv  top_hough_uart.sv  uart_rx.sv  uart_top.sv  uart_tx.sv
Teste FPGA Lattice/Teste_Refatoracao/: colorlight_i9.lpf  frame_buffer_24bit.sv  g_matrix.sv  hough_tracker.sv  pixel_assembler_tx.sv  sobel_processor.sv  top_hough_uart.sv  uart_rx.sv  uart_top.sv  uart_tx.sv
Teste FPGA Lattice/UART-Pico-W/picow_freertos/src/: CMakeLists.txt  main.c
Teste FPGA Lattice/UART-protocol/: OPTIMIZATIONS_ECP5.md  PINOUT_COLORLIGHT_I9.md  QUICKSTART_COLORLIGHT_I9.md  README_UART.md  SUMMARY_UART.md  flash_openfpgaloader.bat  flash_uart.bat  matrix_mem.sv  matrix_mult.sv  test_fpga_uart.py  uart_colorlight_i9.lpf  uart_constraints.sdc  uart_echo_colorlight_i9.bit  uart_echo_colorlight_i9.sv  uart_example_colorlight_i9.sv  uart_example_fpga.sv  uart_rx.sv
Teste FPGA Lattice/fpga_uart_hough_2/: sobel_filter_seq.sv  uart_rx_module.sv  uart_top.sv  uart_tx_module.sv
UART-protocol/: flash_uart.bat  hough_transform.sv  matrix_mult.sv  matrix_mult_top.sv  testbench.bat  uart_colorlight_i9.lpf  uart_echo_colorlight_i9.bit  uart_echo_colorlight_i9.sv  uart_rx.sv  uart_top.sv
UART-protocol/InterfaceFPGA_6/: CMakeLists.txt
UART-protocol/InterfaceFPGA_6/src/: CMakeLists.txt  main.c
UART-protocol/files_testbench/: hough_transform_tb.sv  matrix_mult_tb.sv  run_uart_hough_test.bat  uart_echo_tb.sv  uart_hough_integration_tb.sv  (+1 more)
(+45 files in other folders)
